# open-agent

./: README.md  pyproject.toml
src/: app.py  chat.tcss  open_agent.py  open_agent_ui.py
src/openagent/: __init__.py  app.py  context.py  provider.py  session.py  state.py  tooling.py
tests/: test_open_agent_provider.py  test_open_agent_session.py  test_open_agent_state.py  test_open_agent_tooling.py
